hphp/test/zend/bad/ext/ldap/tests/ldap_first_entry_basic.php
<?php
require "connect.inc";

$link = ldap_connect_and_bind($host, $port, $user, $passwd, $protocol_version);
insert_dummy_data($link);
$result = ldap_search($link, "dc=my-domain,dc=com", "(objectclass=person)");
var_dump(
	$entry = ldap_first_entry($link, $result),
	ldap_get_values($link, $entry, 'sn')
);
?>
===DONE===
<?php
include "connect.inc";

$link = ldap_connect_and_bind($host, $port, $user, $passwd, $protocol_version);
remove_dummy_data($link);
?>